--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/wallpapter0"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -30,6 +31,7 @@
 
             <!--Avatar-->
             <ImageView
+                android:id="@+id/imvAvatar"
                 android:src="@drawable/avatar"
                 android:scaleType="centerInside"
                 android:layout_width="match_parent"
@@ -37,6 +39,7 @@
 
             <!--Name-->
             <EditText
+                android:id="@+id/edtName"
                 android:inputType="text"
                 android:hint="Name :"
                 android:layout_marginTop="30dp"
@@ -53,18 +56,21 @@
                 android:layout_height="wrap_content" />
 
             <RadioGroup
+                android:id="@+id/ragGender"
                 android:layout_marginTop="15dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <RadioButton
+                    android:id="@+id/radMale"
                 android:layout_weight="1"
                 android:text="Male"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
                 <RadioButton
+                    android:id="@+id/radFemale"
                     android:layout_weight="1"
                     android:text="Female"
                     android:layout_width="match_parent"
@@ -74,6 +80,7 @@
 
             <!--Email-->
             <EditText
+                android:id="@+id/edtEmail"
                 android:inputType="textEmailAddress"
                 android:hint="Email :"
                 android:layout_marginTop="30dp"
@@ -82,6 +89,7 @@
 
             <!--Password-->
             <EditText
+                android:id="@+id/edtPassword"
                 android:inputType="text"
                 android:hint="Password :"
                 android:layout_marginTop="30dp"
